--- a/stylesheet/graphisme/s1graphisme_logoM.css
+++ b/stylesheet/graphisme/s1graphisme_logoM.css
@@ -1,11 +1,6 @@
-.exit{
-    padding: 2% 10%;
-    width: 3%;
-}
-
 .tshirt{
-    width: 1920px;
-    height: 900px;
+    width: 100%;
+    height: 96vh;
     padding: 7% 0;
     object-fit: cover;
     object-position: 0 50%;
@@ -13,7 +8,7 @@
 
 .logosM{
     padding: 7% 0;
-    width: 1920px;
+    width: 99vw;
 }
 
 .made_w{
@@ -25,8 +20,8 @@
 /*css de s2graphisme_hypnose.html*/
 
 .lettre{
-    width: 1920px;
-    height: 1080px;
+    width: 100%;
+    height: 115vh;
     padding: 7% 0;
     object-fit: cover;
     object-position: 0 47.5%;
