--- a/stylesheet/css_home.css
+++ b/stylesheet/css_home.css
@@ -26,6 +26,11 @@ h3{
 nav{
     width: 100%;
     padding: 1.5% 0;
+    background-color: #F5F4F5;
+}
+
+#navbar{
+    transition: top 0.4s; /* Transition effect when sliding down (and up) */
 }
 
 nav ul{
@@ -72,4 +77,24 @@ nav a{
 .objEffect {
     will-change: transform;
     transition: transform .3s linear;
-  }
+}
+
+.include {
+    border:none;
+    width: 100%;
+    height: 310px;
+}
+
+.fix {
+    position: fixed;
+    z-index: 5;
+}
+
+.espace{
+    width: 100%;
+    height: 150px;
+}
+
+.ft{
+    background-color: transparent;
+}
