--- a/stylesheet/css_home.css
+++ b/stylesheet/css_home.css
@@ -97,4 +97,110 @@ nav a{
 
 .ft{
     background-color: transparent;
+    height: 150px;
+}
+
+/* css des boutons */
+
+* {
+  box-sizing: inherit;
+  transition-property: all;
+  transition-duration: 0.6s;
+  transition-timing-function: ease;
+  
+}
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  
+}
+
+.container2 {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1em;
+  text-align: center;
+}
+@media (min-width: 600px) {
+  .container2 {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+.btn {
+    color: #F9495F;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 45px;
+    margin: 0 0 2em;
+    max-width: 160px;
+    position: relative;
+    text-decoration: none;
+    /* text-transform: uppercase; */
+    width: 100%;
+}
+@media (min-width: 600px) {
+  .btn {
+    margin: 0 0 2em;
+  }
+}
+.btn:hover {
+  text-decoration: none;
+}
+
+.btn-1 {
+  font-weight: 100;
+}
+.btn-1 svg {
+  height: 45px;
+  left: -15px;
+  position:absolute;
+  top: 0;
+  width: 130%;
+}
+.btn-1 rect {
+  fill: none;
+  stroke: #F9495F;
+  stroke-width: 2;
+  stroke-dasharray: 422, 0;
+  transition: all 0.35s linear;
+}
+
+.btn-1:hover {
+  background: rgba(225, 51, 45, 0);
+  font-weight: 900;
+  letter-spacing: 1px;
+}
+.btn-1:hover rect {
+  stroke-width: 5;
+  stroke-dasharray: 15, 310;
+  stroke-dashoffset: 48;
+  transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+
+.made_w2{
+    float: right;
+    padding-right: 20%;
+}
+
+/* css du texte de sélection */
+
+::selection{
+  background-color: #936291;
+  color: #F5F4F5;
+}
+
+::-moz-selection {
+  background-color: #936291;
+  color: #F5F4F5;
 }
