--- a/stylesheet/webdesign/webdesign.css
+++ b/stylesheet/webdesign/webdesign.css
@@ -76,3 +76,15 @@
 .black p{
     color: whitesmoke;
 }
+
+.newsletter{
+    width: 80vw;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.t_right{
+    padding: 3vw;
+    width: 35vw;
+}
